# weather-summary

./: .gitignore  README.md  example.ini  pyproject.toml  send_weather.py
